# ufr

./: .gitignore  CMakeLists.txt  README.md  README.pt.md  compile_all.sh
etc/: Makefile  init.bash
examples/: CMakeLists.txt
examples/0-basic/: client.c  publisher.c  publisher_image.cpp  server.c  server.cpp  subscriber.c  subscriber_image.cpp
examples/1-robot-simple/: pioneer.py
examples/others/: shell.py  teste.c
pagina/: cmd_vel.php  image.php  index.php  odom.php
tests/: CMakeLists.txt
tests/src/: dados.txt  pub_ii.c  sub_ii.c  test_socket.c  test_topic.c  teste.c  teste_simple.c  testlib.c
ufr-api/: LICENSE
ufr-api-c/: CMakeLists.txt
ufr-api-c/examples/: publisher.c  publisher_2topic.c  publisher_image.cpp  server.cpp  server_data.c  server_robot.cpp  subscriber.c  subscriber_2topic.c
ufr-api-c/include/: ufr.h  ufr_md5.h  ufr_test.h
ufr-api-c/src/: ufr_api.c  ufr_api_get.c  ufr_api_put.c  ufr_buffer.c  ufr_linux.c  ufr_posix_pipe.c  ufr_sys.c  ufr_sys_std_dcr.c  ufr_sys_std_ecr.c  ufr_sys_std_enc.c
ufr-api-c/templates/: decoder.c  encoder.c  gateway.c
ufr-api-c/tests/: CMakeLists.txt  test_api.c  test_buffer.c  test_std_dcr.c  test_std_enc.c
ufr-api-pascal/: install.sh
ufr-api-pascal/etc/: Makefile.fpc  aaa  fpmake.pp
ufr-api-pascal/examples/: pub_ii.pas  sub_ii.pas  teste1.pas
ufr-api-pascal/src/: ufr.pp
ufr-api-php/: build.sh  config.m4  php_helloworld.c  php_helloworld.h  php_ufr.c  php_ufr.h  teste_client.php  teste_publisher.php  teste_server.php  teste_subscriber.php
ufr-api-python/: Makefile
ufr-api-python/tests/: ssh.py  zmq_client.py  zmq_publisher.py  zmq_server.py  zmq_subscriber.py
ufr-api-python/ufr/: link.py  robot.py
ufr-app-filesystem/: CMakeLists.txt
ufr-app-filesystem/src/: main.c  main.cpp  shell.c
ufr-app-proxy/: CMakeLists.txt
ufr-app-shell/: CMakeLists.txt  urf_shell
ufr-cc-msgpack/: CMakeLists.txt
ufr-cc-msgpack/src/: ufr_dcr_msgpack.c  ufr_ecr_msgpack.c  ufr_enc_msgpack.c
ufr-cc-msgpack/tests/: CMakeLists.txt  test_dcr_msgpack.c  test_ecr_msgpack.c  test_enc_msgpack.c
ufr-cc-std/: CMakeLists.txt
ufr-cc-std/src/: ufr_dcr_csv.c  ufr_dcr_std.c  ufr_ecr_std.cpp  ufr_enc_csv.cpp  ufr_enc_std.cpp
ufr-cc-std/tests/: CMakeLists.txt  test_dcr_std.c  test_ecr_std.c  test_enc_std.c
ufr-cdr-http/: CMakeLists.txt
ufr-cdr-http/src/: ufr_dcr_http_ans.c  ufr_dcr_http_req.c  ufr_enc_http_ans.c  ufr_enc_http_req.c
ufr-cdr-http/tests/: CMakeLists.txt  test.h  test_dcr_http.c  test_enc_http.c
ufr-cdr-msgpack/: CMakeLists.txt  setup.py
ufr-cdr-std/: CMakeLists.txt  Makefile
ufr-dev-camera/: CMakeLists.txt
ufr-dev-camera/examples/: example1.cpp
ufr-dev-camera/src/: ufr_gtw_video.c  ufr_stk_video_link.cpp  ufr_stk_video_opencv.cpp
ufr-dev-lidar/: CMakeLists.txt
ufr-dev-lidar/src/: main.cpp
ufr-gtw-gtk/: CMakeLists.txt
ufr-gtw-gtk/src/: ufr_gtw_gtk.c
ufr-gtw-gtk/tests/: CMakeLists.txt  main.c
ufr-gtw-http/: CMakeLists.txt
ufr-gtw-http/src/: gtw_http.c  gtw_httpd.c  gw_httpd.c
ufr-gtw-http/tests/: CMakeLists.txt  main.c
ufr-gtw-mqtt/: CMakeLists.txt  README.md  setup.py
ufr-gtw-mqtt/src/: urf_gtw_mqtt.c
ufr-gtw-mqtt/tests/: CMakeLists.txt  test_gtw_mqtt.c
ufr-gtw-posix/: CMakeLists.txt  LICENSE
ufr-gtw-posix/src/: ufr_gtw_posix.c  ufr_gtw_timer.c  ufr_message.c  ufr_message.h  ufr_posix_dir.c  ufr_posix_file.c  ufr_posix_pipe.c  ufr_posix_socket.c  ufr_posix_socket.h  ufr_posix_socket_cli.c  ufr_posix_socket_srv.c  ufr_posix_socket_srv_mt.c  ufr_posix_socket_srv_st.c  ufr_posix_thread.c
ufr-gtw-posix/tests/: CMakeLists.txt  test_api.c  test_file.c  test_pipe.c  test_socket.c
ufr-gtw-qt/: CMakeLists.txt
ufr-gtw-qt/src/: ufr_gtw_qt.cpp
ufr-gtw-qt/tests/: CMakeLists.txt  main.c
ufr-gtw-sqlite/: CMakeLists.txt
ufr-gtw-sqlite/src/: ufr_gtw_sqlite.c
ufr-gtw-sqlite/tests/: test_gtw_sqlite.c
ufr-gtw-yarp/: CMakeLists.txt
ufr-gtw-yarp/src/: lt_zmq_common.c  lt_zmq_common.h  lt_zmq_socket.c  lt_zmq_topic.c
ufr-gtw-yarp/tests/: CMakeLists.txt  test_api.c
ufr-gtw-zmq/: CMakeLists.txt
ufr-gtw-zmq/src/: ufr_zmq_common.c  ufr_zmq_common.h  ufr_zmq_socket.c  ufr_zmq_topic.c
ufr-gtw-zmq/tests/: CMakeLists.txt  test_api.c  test_gtw_zmq.c
ufr-stk-ros_humble/: CMakeLists.txt  package.xml
ufr-stk-ros_humble/src/: ufr_dcr_image.cpp  ufr_dcr_laserscan.cpp  ufr_dcr_pose.cpp  ufr_dcr_string.cpp  ufr_dcr_twist.cpp  ufr_ecr_pose.cpp  ufr_ecr_string.cpp  ufr_ecr_twist.cpp  ufr_enc_image.cpp  ufr_enc_laserscan.cpp  ufr_enc_pose.cpp  ufr_enc_string.cpp  ufr_enc_twist.cpp  ufr_gtw_ros_humble.cpp  ufr_gtw_ros_humble.hpp
ufr-stk-ros_humble/tests/: CMakeLists.txt  test1.cpp
ufr-stk-ros_melodic/: CMakeLists.txt  package.xml
ufr-stk-ros_melodic/src/: ufr_dcr_i16.cpp  ufr_dcr_laserscan.cpp  ufr_dcr_pose.cpp  ufr_dcr_string.cpp  ufr_dcr_twist.cpp  ufr_enc_image.cpp  ufr_enc_laserscan.cpp  ufr_enc_pose.cpp  ufr_enc_string.cpp  ufr_gtw_ros_melodic.cpp  ufr_gtw_ros_melodic.hpp
ufr-stk-ros_noetic/: CMakeLists.txt  package.xml
ufr-stk-ros_noetic/src/: ufr_dcr_pose.cpp  ufr_enc_image.cpp  ufr_enc_laserscan.cpp  ufr_enc_string.cpp  ufr_enc_twist.cpp  ufr_gtw_ros_noetic.cpp  ufr_gtw_ros_noetic.hpp
ufr-stk-ros_noetic/tests/: CMakeLists.txt  test1.cpp
ufr-stk-sqlite/: CMakeLists.txt  setup.py
ufr-stk-ssh/: CMakeLists.txt
ufr-stk-ssh/src/: ufr_enc_ssh.c  ufr_gtw_ssh.c  ufr_ssh.h
ufr-stk-ssh/tests/: CMakeLists.txt  test1.c
ufr-stk-webots/: CMakeLists.txt
ufr-stk-webots/src/: dcr_encoders.c  dcr_lidar.c  dcr_pose.c  enc_motors.c  gtw_webots.c  ufr_webots.h
ufr-stk-webots/tests/: CMakeLists.txt  test1.c
vri-base-pioneer/: CMakeLists.txt
vri-base-pioneer-webots/: .pioneer3at.wbproj  CMakeLists.txt  pioneer3at.wbt
vri-base-pioneer-webots/src/: main.c
vri-base-pioneer/src/: main.cpp  main_lidar.cpp
vri-lab_remoto/: CMakeLists.txt
vri-lab_remoto/src/: camera.cpp
vri-nav-simple/: CMakeLists.txt
vri-slam-lama/: CMakeLists.txt
vri-slam-simple/: CMakeLists.txt
vri-slam-simple/src/: main.cpp
website/: index.md  package-lock.json  package.json  run.sh
(+33 files in other folders)
