<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ufr-stk-ros_noetic</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="felipebombardelli@gmail.com">fgbombardelli</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
